[workspace]
resolver = "2"

members = [
  "packages/*",
  "contracts/liquidity_hub/pool-network/*",
  "contracts/liquidity_hub/fee_collector",
  "contracts/liquidity_hub/fee_distributor",
  "contracts/liquidity_hub/fee-distributor-mock",
  "contracts/liquidity_hub/whale_lair",
  "contracts/liquidity_hub/vault-network/*",
  "contracts/liquidity_hub/epoch-manager",
]

[workspace.package]
edition = "2021"
homepage = "https://whitewhale.money"
documentation = "https://docs.whitewhale.money/white-whale"
license = "MIT"
repository = "https://github.com/White-Whale-Defi-Platform/migaloo-core"
publish = false

[workspace.dependencies]
cosmwasm-schema = "1.1.4"
cosmwasm-std = { version = "1.1.4", features = ["iterator"] }
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.1.0", features = ["library"] }
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
schemars = "0.8.12"
semver = "1.0.12"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.43"
osmosis-std-derive = "0.15.3"
prost = { version = "0.11.9", default-features = false, features = [
  "prost-derive",
] }
prost-types = { version = "0.11.9", default-features = false }
white-whale-std = { version = "1.1.1", path = "packages/white-whale-std", features = [
] }
white-whale-testing = { path = "./packages/white-whale-testing" }
cw-multi-test = { version = "0.16.5" }
uint = "0.9.5"
integer-sqrt = "0.1.5"
anyhow = { version = "1.0.71" }
cw-controllers = "1.1.0"
anybuf = { version = "0.3.0" }

# contracts
whale-lair = { path = "./contracts/liquidity_hub/whale_lair" }
fee_collector = { path = "./contracts/liquidity_hub/fee_collector" }
fee_distributor = { path = "./contracts/liquidity_hub/fee_distributor" }
fee-distributor-mock = { path = "./contracts/liquidity_hub/fee-distributor-mock" }
incentive-factory = { path = "./contracts/liquidity_hub/pool-network/incentive_factory" }
terraswap-token = { path = "./contracts/liquidity_hub/pool-network/terraswap_token" }

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/0xFable/cw-lint" }]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
