[package]
name = "integration-tests"
version = "0.1.0"
description = "e2e integration tests for the Migaloo project"
edition.workspace = true


[features]
default = ["osmosis_token_factory"]
injective = ["token_factory"]
token_factory = []
osmosis = ["osmosis_token_factory"]
osmosis_token_factory = ["token_factory"]

[dependencies]
bonding-manager.workspace = true
epoch-manager.workspace = true
incentive-manager.workspace = true
pool-manager.workspace = true
vault-manager.workspace = true
cw-multi-test.workspace = true
anyhow.workspace = true
white-whale-std.workspace = true
white-whale-testing.workspace = true
cosmwasm-std.workspace = true
cw-ownable.workspace = true
