# see https://github.com/matklad/cargo-xtask for more details about this package.
# it is a helper to run rust binary tasks on the repository.
# for instance, we can use it to generate all schemas for each contract.

[package]
name = "xtask"
version = "1.0.0"
description = "Generate cosmwasm schemas for white-whale-core workspace members"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cosmwasm-schema.workspace = true
serde.workspace = true
serde_json = "1.0.115"
white-whale-std.workspace = true
