[package]
name = "bonding-manager"
version = "0.1.0"
authors = ["0xFable <0xfable@protonmail.com>"]
edition.workspace = true
description = "The Bonding Manager is the evolution of the Whale Lair, fee distributor and fee collecotr. It is a bonding contract used to bond WHALE LSDs, collect fees from pools and distribute them a rewards to bonders"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale-std/injective"]
osmosis = ["osmosis_token_factory"]
token_factory = ["white-whale-std/token_factory"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale-std.workspace = true
cw-utils.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
anyhow.workspace = true
white-whale-testing.workspace = true
