[package]
name = "fee-distributor-mock"
version = "0.1.0"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "A mock contract of the fee distributor"
license.workspace = true
publish.workspace = true

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale/injective"]
token_factory = ["white-whale/token_factory"]
osmosis_token_factory = ["white-whale/osmosis_token_factory"]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std.workspace = true
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
white-whale.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
