[package]
name = "fee_collector"
version = "1.1.5"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "Contract to collect the fees accrued by the pools and vaults in the liquidity hub"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]
injective = ["white-whale-std/injective"]
osmosis = ["osmosis_token_factory"]

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
cw20.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale-std.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
terraswap-router = { path = "../pool-network/terraswap_router" }
terraswap-factory = { path = "../pool-network/terraswap_factory" }
terraswap-pair = { path = "../pool-network/terraswap_pair" }
stableswap-3pool = { path = "../pool-network/stableswap_3pool" }
terraswap-token = { path = "../pool-network/terraswap_token" }
fee_distributor = { path = "../fee_distributor" }
whale-lair = { path = "../whale_lair" }
vault_factory = { version = "1.0.0", path = "../vault-network/vault_factory" }
vault = { version = "1.0.0", path = "../vault-network/vault" }
cw20.workspace = true
