[package]
name = "pool-manager"
version = "0.1.0"
authors = ["0xFable <0xfable@protonmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
injective = ["white-whale/injective"]
token_factory = ["white-whale/token_factory"]
osmosis_token_factory = ["white-whale/osmosis_token_factory"]

# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""



[dependencies]
cosmwasm-schema.workspace = true 
cosmwasm-std.workspace = true 
cw-storage-plus.workspace = true
cw2.workspace = true 
cw20.workspace = true 
cw20-base.workspace = true
serde.workspace = true 
white-whale.workspace = true
thiserror.workspace = true
cw-utils.workspace = true
cw-ownable.workspace = true
sha2.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
anyhow.workspace = true
test-case = "1.1"
bech32.workspace = true
whale-lair.workspace = true