[package]
name = "vault-manager"
version = "0.1.0"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale.workspace = true
cw-utils.workspace = true



[dev-dependencies]
cw-multi-test = "0.16.2"
