[package]
name = "vault-manager"
version = "0.1.0"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "The Vault Manager is a contract that allows to manage multiple vaults in a single contract, offerish flashloan capabilities with held assets."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale-std/injective"]
token_factory = ["white-whale-std/token_factory"]
osmosis = ["osmosis_token_factory"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale-std.workspace = true
cw-utils.workspace = true
cw-ownable.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
whale-lair.workspace = true
terraswap-token.workspace = true
terraswap-pair.workspace = true
fee_collector.workspace = true
anyhow.workspace = true
white-whale-testing.workspace = true
