[package]
name = "whale-lair"
version = "0.1.0"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "The Whale Lair is a staking contract used to stake WHALE tokens to have voting rights in gov proposals and to earn rewards collected by the Migaloo protocol."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://whitewhale.money"
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale.workspace = true

[dev-dependencies]
cw-multi-test = "0.16.2"
anyhow = { version = "1.0.68"}
white-whale-testing.workspace = true
