[package]
name = "whale-lair"
version = "0.8.2"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "The Whale Lair is a bonding contract used to bond WHALE LSDs."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale/injective"]
token_factory = ["white-whale/token_factory"]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale.workspace = true
cw-utils.workspace = true

[dev-dependencies]
cw-multi-test = "0.16.2"
anyhow = { version = "1.0.68"}
white-whale-testing.workspace = true
