[package]
name = "incentive"
version = "1.0.8"
authors = ["kaimen-sano <kaimen_sano@protonmail.com>"]
edition.workspace = true
description = "An incentive manager for an LP token"
license.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale-std/injective"]
osmosis = ["osmosis_token_factory"]
token_factory = ["white-whale-std/token_factory"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
protobuf.workspace = true
cw20.workspace = true
cw2.workspace = true
thiserror.workspace = true
semver.workspace = true
white-whale-std.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true
classic-bindings.workspace = true

#[dev-dependencies]
#cw-multi-test.workspace = true
#cw20-base.workspace = true
#anyhow.workspace = true
#incentive-factory.workspace = true
#fee_collector.workspace = true
#fee_distributor.workspace = true
#fee-distributor-mock.workspace = true
#terraswap-token.workspace = true
